force-app/main/default/objects/ATS19CategoryAssignment__c/ATS19CategoryAssignment__c.object-meta.xml
<CustomObject>
    <label>Category Assignment</label>
    <nameField>
        <label>Showroom Category</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>