force-app/main/default/objects/ATS19CategoryAssignment__c/fields/ATS19Category__c.field-meta.xml
<CustomField>
    <fullName>ATS19Category__c</fullName>
    <label>Category</label>
    <referenceTo>ATS19Category__c</referenceTo>
    <relationshipLabel>Schowrooms</relationshipLabel>
    <relationshipName>Showrooms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>