force-app/main/default/objects/ATS19CategoryAssignment__c/fields/ATS19FromDate__c.field-meta.xml
<CustomField>
    <fullName>ATS19FromDate__c</fullName>
    <label>From Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>