force-app/main/default/objects/ATS19CategoryAssignment__c/fields/ATS19Showroom__c.field-meta.xml
<CustomField>
    <fullName>ATS19Showroom__c</fullName>
    <label>Showroom</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>