force-app/main/default/objects/ATS19CategoryAssignment__c/fields/ATS19ToDate__c.field-meta.xml
<CustomField>
    <fullName>ATS19ToDate__c</fullName>
    <label>To Date</label>
    <type>Date</type>
</CustomField>